package ws

import (
	"context"

	"github.com/abdoElHodaky/tradSys/proto/ws"
	"github.com/google/uuid"
	"go.uber.org/fx"
	"go.uber.org/zap"
)

// HandlerParams contains the parameters for creating a WebSocket handler
type HandlerParams struct {
	fx.In

	Logger *zap.Logger
	Server *Server `optional:"true"`
}

// Handler implements the WebSocketService handler
type Handler struct {
	ws.UnimplementedWebSocketServiceServer
	logger *zap.Logger
	server *Server
}

// NewHandler creates a new WebSocket handler with fx dependency injection
func NewHandler(p HandlerParams) *Handler {
	return &Handler{
		logger: p.Logger,
		server: p.Server,
	}
}

// Subscribe implements the WebSocketService.Subscribe method
func (h *Handler) Subscribe(ctx context.Context, req *ws.SubscribeRequest, rsp *ws.SubscribeResponse) error {
	h.logger.Info("Subscribe called",
		zap.String("topic", req.Topic),
		zap.String("client_id", req.ClientId))

	// Implementation would go here
	// For now, just return a placeholder response
	rsp.Success = true
	rsp.SubscriptionId = uuid.New().String()

	return nil
}

// Unsubscribe implements the WebSocketService.Unsubscribe method
func (h *Handler) Unsubscribe(ctx context.Context, req *ws.UnsubscribeRequest, rsp *ws.UnsubscribeResponse) error {
	h.logger.Info("Unsubscribe called",
		zap.String("subscription_id", req.SubscriptionId),
		zap.String("client_id", req.ClientId))

	// Implementation would go here
	// For now, just return a placeholder response
	rsp.Success = true

	return nil
}

// Publish implements the WebSocketService.Publish method
func (h *Handler) Publish(ctx context.Context, req *ws.PublishRequest, rsp *ws.PublishResponse) error {
	h.logger.Info("Publish called",
		zap.String("topic", req.Topic),
		zap.Int("data_size", len(req.Data)))

	// Implementation would go here
	// For now, just return a placeholder response
	rsp.Success = true
	rsp.Recipients = 10

	return nil
}

// GetConnections implements the WebSocketService.GetConnections method
func (h *Handler) GetConnections(ctx context.Context, req *ws.GetConnectionsRequest, rsp *ws.GetConnectionsResponse) error {
	h.logger.Info("GetConnections called",
		zap.String("topic", req.Topic))

	// Implementation would go here
	// For now, just return placeholder connections
	rsp.Connections = []*ws.Connection{
		{
			ClientId:      uuid.New().String(),
			UserId:        "user1",
			ConnectedAt:   1625097600000,
			Subscriptions: []string{"marketdata.BTC-USD", "orders.updates"},
			IpAddress:     "192.168.1.1",
			UserAgent:     "Mozilla/5.0",
		},
		{
			ClientId:      uuid.New().String(),
			UserId:        "user2",
			ConnectedAt:   1625097660000,
			Subscriptions: []string{"marketdata.ETH-USD"},
			IpAddress:     "192.168.1.2",
			UserAgent:     "Chrome/91.0.4472.124",
		},
	}
	rsp.TotalConnections = int32(len(rsp.Connections))

	return nil
}

// HandlerModule provides the WebSocket handler module for fx
var HandlerModule = fx.Options(
	fx.Provide(NewHandler),
)
